# bromium

./: .gitignore  AUDIT_FINDINGS_2_COMBINED.md  Cargo.toml  README copy.md  README.md  ci.ps1
.github/workflows/: ci.yml
.tokensave/: config.json  tokensave.db
bromium_docs_for_agents/done/: AUDIT_FINDINGS_2_CC.md  AUDIT_FINDINGS_2_CX.md  AUDIT_FINDINGS_3_CC.md  AUDIT_FINDINGS_3_COMBINED.md  AUDIT_FINDINGS_3_CX.md  AUDIT_FINDINGS_CC.md  AUDIT_FINDINGS_COMBINED.md  AUDIT_FINDINGS_CX.md  AUDIT_REMEDIATION.md  AUDIT_REPORT_CL.md  AUDIT_REPORT_CX.md  AUDIT_REPORT_MERGED.md  PERF_UITREE_REPORT.md  PYTHON_USABILITY_AUDIT.md
crates/bromium/: Cargo.toml  README.md  bromium.pyi  pyproject.toml
crates/bromium-common/: Cargo.toml
crates/bromium-common/src/: lib.rs  macros.rs  rectangle.rs  timeout.rs  uia.rs
crates/bromium/examples/: app_launch.py  usage.py
crates/bromium/pyo3venv/: pyvenv.cfg
crates/bromium/pyo3venv/Scripts/: activate  activate.bat
crates/bromium/src/: app_control.rs  exceptions.rs  instance_logging.rs  lib.rs  logging.rs  rectangle.rs  screen_context.rs  uiauto.rs  windriver.rs
crates/bromium/tests/: app_start_danipc.py  log_test.py
crates/screen-capture/: Cargo.toml
crates/screen-capture/examples/: focused_window.rs  monitor.rs  monitor_capture.rs  monitor_record.rs  monitor_region_capture.rs  window.rs  window_capture.rs  window_capture_from_HWND.rs
crates/screen-capture/src/: lib.rs  monitor.rs  window.rs
crates/screen-capture/src/mswindows/: capture.rs  impl_monitor.rs  impl_video_recorder.rs  impl_window.rs  utils.rs
crates/uiexplore/: Cargo.toml  README.md
crates/uiexplore/res/: magnifier.xcf
crates/uiexplore/src/: app_ui.rs  border.rs  border_window.rs  main.rs  rectangle.rs  signal_file.rs
crates/uitree/: Cargo.toml
crates/uitree/src/: common_types.rs  commons.rs  conversion.rs  error.rs  lib.rs  main.rs  save_ui_element.rs  tree_map.rs  uiexplore.rs  uiexplore_iter.rs  uiexplore_xml.rs  walker_common.rs
crates/winevent-monitor/: Cargo.toml
crates/winevent-monitor/src/: lib.rs  winevent.rs
crates/xmlutil/: Cargo.toml
crates/xmlutil/src/: lib.rs  pretty_print.rs  xml.rs  xml_dom_manager.rs  xpath_eval.rs  xpath_gen.rs
