[workspace]
resolver = "3"
members = [
    "crates/bromium",
    "crates/bromium-common",
    "crates/screen-capture",
    "crates/uiexplore",
    "crates/uitree",
    "crates/xmlutil",
    "crates/winevent-monitor",
]

[workspace.dependencies]
uiautomation = "0.22.2"
chrono = "0.4.41"
log = {version = "0.4", features = ["std"] }
xot = "0.31.2"
thiserror = "2.0"
quick-xml = "0.38.0"
windows = { version = "0.61.1", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Devices_Display",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Registry",
    "Win32_Storage_Xps",
    "Win32_Storage_FileSystem",
    "Win32_UI_Accessibility",
    "Win32_UI_HiDpi",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release-with-debug]
inherits = "release"
debug = true
