[package]
name = "bromium"
version = "0.7.0"
edition = "2024"
readme = "README.md"
description = "A Python extension for UI Automation on Windows."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bromium"
crate-type = ["cdylib"]

[dependencies]
uiautomation.workspace = true
chrono.workspace = true
windows.workspace = true
log.workspace = true

bromium-common = { path = "../bromium-common" }
screen-capture = { path = "../screen-capture" }
uitree = { path = "../uitree" }

thiserror = "2.0"
pyo3 = "0.25.1"
display-info = "0.5.4"
windows-strings = "0.4.2"
