[package]
name = "screen-capture"
version = "0.1.0"
edition = "2024"
description = "Screen Cappture is a MS Windows screen capture library written in Rust."
license = "Apache-2.0"
documentation = ""
homepage = ""
repository = ""
keywords = ["screen", "monitor", "window", "capture", "image"]

# [workspace]
# members = ["."]
# resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
image = ["image/default"]

[dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
log.workspace = true
scopeguard = "1.2"
thiserror.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
widestring = "1.2"
windows.workspace = true

[dev-dependencies]
fs_extra = "1.3"
