[package]
name = "uitree"
version = "0.1.0"
edition = "2024"

[dependencies]
uiautomation.workspace = true
chrono.workspace = true
log.workspace = true

bromium-common = { path = "../bromium-common" }
xmlutil = { path = "../xmlutil" }

xot.workspace = true
thiserror.workspace = true
quick-xml.workspace = true